--- a/ChronoGlobe/ChronoMap/index.html
+++ b/ChronoGlobe/ChronoMap/index.html
@@ -483,5 +483,13 @@
   });
 </script>
 
+<!-- 📜 Lisans Bilgisi -->
+<footer style="text-align:center; font-size:12px; margin-top:20px; padding:10px; color:#666;">
+  <p>
+    Harita verileri: <a href="https://www.openstreetmap.org/copyright" target="_blank">© OpenStreetMap katkıda bulunanlar</a> |
+    Harita kütüphanesi: <a href="https://leafletjs.com/" target="_blank">Leaflet (MIT Lisansı)</a>
+  </p>
+</footer>
+
 </body>
 </html>
