--- a/ChronoGlobe/ChronoMap/index.html
+++ b/ChronoGlobe/ChronoMap/index.html
@@ -27,6 +27,21 @@
       <input type="text" id="country-search" placeholder="Ülke ara..." autocomplete="off" aria-label="Ülke arama kutusu" />
       <ul id="country-search-results"></ul>
     </div>
+
+    <!-- 🌟 ChronoGlobe Davet Kutusu -->
+    <div id="invite-box">
+      <h3>ChronoGlobe topluluğuna katıl!</h3>
+      <p>
+        Açık kaynak bir dünya projesi: haritaları sen tasarla, verileri sen ekle,
+        geleceğe sen yön ver.  
+        <em>“Bir elin nesi var, iki elin sesi var.”</em>
+      </p>
+      <a href="https://github.com/U425mut/ChronoGlobe" target="_blank" class="invite-btn">
+        <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub" class="github-logo">
+        GitHub’da Katıl
+      </a>
+    </div>
+    <!-- 🌟 Davet Kutusu Son -->
   </div>
 
   <div class="right-section">
@@ -42,6 +57,7 @@
     </div>
   </div>
 </header>
+
 
 
 
