--- a/ChronoGlobe/ChronoMap/index.html
+++ b/ChronoGlobe/ChronoMap/index.html
@@ -29,11 +29,12 @@
     </div>
 
 <!-- 🌟 Davet kutusu: ülke aramasının SAĞINA -->
-<div id="invite-cta" role="complementary" aria-label="ChronoGlobe Katkı Daveti">
+<div id="invite-cta" class="hidden" role="complementary" aria-label="ChronoGlobe Katkı Daveti">
   <a href="https://github.com/U425mut/ChronoGlobe" target="_blank" class="invite-link">
     ChronoGlobe topluluğuna katıl!
   </a>  Açık kaynak bir dünya projesi: haritaları sen tasarla, verileri sen ekle,
 </div>
+
 <!-- 🌟 /Davet kutusu -->
 
 
@@ -315,9 +316,24 @@
 
 <script>
   document.addEventListener("DOMContentLoaded", () => {
-    initPanelControls();
-    initYearControls();
-  });
+  initPanelControls();
+  initYearControls();
+
+  // 🚀 Davet kutusu animasyonu
+  const invite = document.getElementById("invite-cta");
+  if (invite) {
+    setTimeout(() => {
+      invite.classList.remove("hidden");
+      invite.classList.add("crash");
+    }, 300); // sayfa açıldıktan 0.3 sn sonra başlasın
+
+    // 🚀 Sürüklenebilirlik ekle
+    makeDraggable(invite);
+  }
+
+
+});
+
 
   // Ülke seçildiğinde çalışır (country-info.json'dan verileri alır)
   window.addEventListener("country:selected", (event) => {
@@ -476,14 +492,46 @@
       });
     }
 
-    // başlangıç değeri
-    updateYear(toInt(slider?.value ?? 2025));
-  }
+   // başlangıç değeri
+  updateYear(toInt(slider?.value ?? 2025));
+}
 
-  // Seçilen ülkeyi globalde sakla (slider yıl değişiminde yeniden yayınlama için)
-  window.addEventListener("country:selected", (e) => {
-    window.currentCountryEvent = e.detail;
+function makeDraggable(el) {
+  if (!el) return;
+  let isDragging = false;
+  let startX, startY;
+  let currentX = 0, currentY = 0;
+
+  el.addEventListener("mousedown", (e) => {
+    isDragging = true;
+    startX = e.clientX - currentX;
+    startY = e.clientY - currentY;
+    el.classList.add("dragging");
   });
+
+  document.addEventListener("mousemove", (e) => {
+    if (!isDragging) return;
+    currentX = e.clientX - startX;
+    currentY = e.clientY - startY;
+    el.style.transform = `translate(${currentX}px, ${currentY}px)`;
+  });
+
+  document.addEventListener("mouseup", () => {
+    if (!isDragging) return;
+    isDragging = false;
+    el.classList.remove("dragging");
+    // bırakınca başlangıç konumuna animasyonla dön
+    currentX = 0;
+    currentY = 0;
+    el.style.transform = `translate(0,0)`;
+  });
+}
+
+// Seçilen ülkeyi globalde sakla (slider yıl değişiminde yeniden yayınlama için)
+window.addEventListener("country:selected", (e) => {
+  window.currentCountryEvent = e.detail;
+});
+
 
   // Mini nav scroll eventleri
   document.querySelectorAll('#mini-nav-panel [data-scroll]').forEach(btn => {
